<resources>
    <string name="app_name">Mawi_Bluetooth_Test_Proj</string>

    <string name="heart_rate">Heart Rate: %1$d</string>
    <string name="is_attached">Is attached: %1$b</string>

    <string name="daily_active_time">Daily active time = %1$d minutes</string>
    <string name="daily_distance">Daily distance = %1$d m</string>
    <string name="daily_calories">Daily calories = %1$d cal</string>
    <string name="daily_steps_progress">Daily steps progress = %1$d steps</string>
    <string name="fit_history_record_count">Fit history record count = %1$d records</string>
    <string name="battery_level">Battery level = %1$d</string>
    <string name="band_location">Band location</string>

    <string-array name="sampling_modes">
        <item>Sampling off (2G, 125DPS)</item>
        <item>Sampling 13Hz (2G, 125DPS)</item>
        <item>Sampling 26Hz (2G, 125DPS)</item>
        <item>Sampling 26Hz (4G, 254DPS)</item>
        <item>Sampling 26Hz (8G, 500DPS)</item>
        <item>Sampling 26Hz (16G, 1000DPS)</item>
        <item>Sampling 52Hz (2G, 125DPS</item>
    </string-array>

    <string-array name="band_locations">
        <item>Right</item>
        <item>Left</item>
    </string-array>
</resources>
